--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header id="title">
         <h1><span class="name">PATCHANE-LACANE</span> Kévin</h1>
-        <h2>Développeur Web</h2>
+        <h2>Développeur Web Fullstack</h2>
         <p>Disponible dès maintenant.</p>
     </header>
 
